--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
-        <title>Test</title>
+        <title>Mohamed Fadika développeur web</title>
     </head>
     <body class="">
         <nav id="navbar" class="navbar sticky-top navbar-nav bg-dark">
