--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Mohamed Fadika - Développeur web</title>
 </head>
 <body class="">
-  <div class="pos-f-t fixed-top d-none d-block d-sm-none">
+  <div class="pos-f-t fixed-top d-none d-block d-md-none">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
         <ul class="text-center">
@@ -31,7 +31,7 @@
       </button>
     </nav>
   </div>
-  <nav id="navbar" class="navbar fixed-top navbar-nav bg-dark d-none d-sm-block d-xs-none">
+  <nav id="navbar" class="navbar fixed-top navbar-nav bg-dark d-none d-md-block d-xs-none">
     <ul class="row justify-content-center">
       <li class="nav-item headerNavbar m-1 btn btn-outline-primary"><a href="#profil">Profil</a></li>
       <li class="nav-item headerNavbar m-1 btn btn-outline-primary"><a href="#partf1">Expériences</a></li>
@@ -78,7 +78,8 @@
         </div>
         <div id="partf2" class="parts text-white pt-1">
           <h2 id="form">Formations</h2>
-          <p class="parag text-center">Il suffit de regarder une chose avec attention pour qu'elle devient intéressante.</p>
+          <p class="parag d-none d-md-block d-xs-none">Il suffit de regarder une chose avec attention pour qu'elle devient intéressante.</p>
+          <p class="quotes d-none d-block d-md-none">Il suffit de regarder une chose avec attention pour qu'elle devient intéressante.</p>
         </div>
         <div class="contentCV content">
           <p class="parag"><strong>En 2018</strong><br />Titre Professionnel "Développeur logiciel" RNCP 5927 niveau III BAC+2 à l'Ecole du
@@ -89,7 +90,8 @@
           </div>
           <div id="partf3" class="parts text-white pt-1">
             <h2 id="skills">Compétences</h2>
-            <p class="parag">Nous ne pouvons pas nous attribuer le mérite de nos talents ce qui importe c'est de les maîtriser.</p>
+            <p class="parag d-none d-md-block d-xs-none">Nous ne pouvons pas nous attribuer le mérite de nos talents ce qui importe c'est de les maîtriser.</p>
+            <p class="quotes d-none d-block d-md-none">Nous ne pouvons pas nous attribuer le mérite de nos talents ce qui importe c'est de les maîtriser.</p>
           </div>
             <div class="contentCV content">
               <div id="web" class="mt-5 col-md-12 col-xs-5">
@@ -140,7 +142,8 @@
           </div>
           <div id="partf4" class="parts text-white pt-1">
             <h2>Centres d'intérets</h2>
-            <p class="parag">La vie est un mystère qu'il faut vivre, et non un problème à résoudre.</p>
+            <p class="parag d-none d-md-block d-xs-none">La vie est un mystère qu'il faut vivre, et non un problème à résoudre.</p>
+            <p class="quotes d-none d-block d-md-none">La vie est un mystère qu'il faut vivre, et non un problème à résoudre.</p>
           </div>
           <div class="contentCV content mb-5 pb-5">
             <div class="row justify-content-center">
