--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
-  <title>Mohamed Fadika - Développeur web</title>
+  <title>Mohamed Fadika - Développeur Web Full-Stack</title>
 </head>
 <body class="">
   <div class="pos-f-t fixed-top d-none d-block d-md-none">
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
         <ul class="text-center">
-          <li class="nav-item headerNavbar d-block btn btn-outline-primary  btn-lg mt-1"><a href="#profil">Profil</a></li>
+          <li class="nav-item headerNavbar d-block btn btn-outline-primary btn-lg mt-1"><a href="#profil">Profil</a></li>
           <li class="nav-item headerNavbar d-block btn btn-outline-primary btn-lg mt-1"><a href="#partf1">Expériences</a></li>
           <li class="nav-item headerNavbar d-block btn btn-outline-primary btn-lg mt-1"><a href="#partf2">Formations</a></li>
           <li class="nav-item headerNavbar d-block btn btn-outline-primary btn-lg mt-1 mt-1"><a href="#partf3">Compétences</a></li>
@@ -40,11 +40,11 @@
       <li class="nav-item headerNavbar m-1 btn btn-outline-primary"><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <div class="container-fluid mt-5">
+  <div class="container-fluid mt-5 pt-4">
     <div class="row justify-content-center">
       <div id="pageBackground" class="pageBackground"></div>
       <div id="divContent">
-        <div id="profil">
+        <div class="mb-5" id="profil">
           <h1>FADIKA Mohamed</h1>
           <p class="text-center mt-1">Saint-Quentin(02100)</p>
           <h2>Développeur web full stack</h2>
@@ -59,14 +59,14 @@
         <div id="partf1" class="parts text-white pt-1">
           <h2 id="exp">Experiences</h2>
         </div>
-        <div id="expContent" class="contentCV content">
+        <div id="expContent" class="contentCV content pt-2 pb-2">
           <p class="parag">
             <strong>En 2018</strong><br />Projets web :
             <ul class="list-unstyled">
-              <li>Création d'un CV numérique avec les outils Bootstrap et JavaScript.</li>
-              <li>Site e-commerce de vente de vetements avec Jquery.</li>
-              <li>Site e-commerce de vente de figurines avec angularJS.</li>
-              <li>Sites de niche sur le theme des chats Laperm sur WordPress.</li>
+              <li class="m-3">- Création d'un CV numérique avec les outils Bootstrap et JavaScript.</li>
+              <li class="m-3">- Site e-commerce de vente de vetements avec Jquery.</li>
+              <li class="m-3">- Site e-commerce de vente de figurines avec angularJS.</li>
+              <li class="m-3">- Sites de niche sur le theme des chats Laperm sur WordPress.</li>
             </ul>
           </p>
           <p class="parag"><strong>En 2015</strong><br />Cuisinier dans le restaurant "Le Tour du Monde" à Brest (29200) pendant 3 mois.</p>
@@ -80,8 +80,8 @@
           <p class="parag d-none d-md-block d-xs-none">Il suffit de regarder une chose avec attention pour qu'elle devient intéressante.</p>
           <p class="quotes d-none d-block d-md-none">Il suffit de regarder une chose avec attention pour qu'elle devient intéressante.</p>
         </div>
-        <div class="contentCV content">
-          <p class="parag"><strong>En 2018</strong><br />Titre Professionnel "Développeur logiciel" RNCP 5927 niveau III BAC+2 à l'Ecole du
+        <div class="contentCV content pb-2">
+          <p class="parag pt-5"><strong>En 2018</strong><br />Titre Professionnel "Développeur logiciel" RNCP 5927 niveau III BAC+2 à l'Ecole du
             Numérique du Noyonnais (840h).</p>
             <p class="parag"><strong>2014 - 2015</strong><br />CQP de Commis de cuisine à l'IFAC de Brest, 1 an.</p>
             <p class="parag"><strong>2005 - 2007</strong><br />BEP Techniques d'Architecture et de l'Habitat au Lycée Colard Noël à Saint-Quentin, 2 ans.</p>
@@ -94,47 +94,47 @@
           </div>
             <div class="contentCV content">
               <div id="web" class="mt-5 col-md-12 col-xs-5">
-                <h2 class="mt-3">Web</h2>
+                <h2 class="pt-4">Web</h2>
                 <div class="row justify-content-center">
-                  <p class="col-md-3">Linux : ★★★☆☆ </p>
-                  <p class="col-md-3">Git/Github : ★★★☆☆</p>
-                  <p class="col-md-3">HTML 5 : ★★★★☆ </p>
-                  <p class="col-md-3">CSS 3 : ★★★☆☆</p>
+                  <p class="col-md-3">Linux :<br /> ★★★☆☆ </p>
+                  <p class="col-md-3">Git/Github :<br /> ★★★☆☆</p>
+                  <p class="col-md-3">HTML 5 :<br /> ★★★★☆ </p>
+                  <p class="col-md-3">CSS 3 :<br /> ★★★☆☆</p>
                 </div>
                 <div class="row justify-content-center">
-                  <p class="col-md-3">Bootstrap : ★★★☆☆ </p>
-                  <p class="col-md-3">JavaScript : ★★★☆☆</p>
-                  <p class="col-md-3">jQuery : ★★★☆☆ </p>
-                  <p class="col-md-3">AngularJs : ★★★☆☆</p>
+                  <p class="col-md-3">Bootstrap :<br /> ★★★☆☆ </p>
+                  <p class="col-md-3">JavaScript :<br /> ★★★☆☆</p>
+                  <p class="col-md-3">jQuery :<br /> ★★★☆☆ </p>
+                  <p class="col-md-3">AngularJs :<br /> ★★★☆☆</p>
                 </div>
                 <div class="row justify-content-center">
-                  <p class="col-md-3">PHP : ★★★☆☆ </p>
-                  <p class="col-md-3">Wordpress : ★★★☆☆</p>
+                  <p class="col-md-3">PHP :<br /> ★★★☆☆ </p>
+                  <p class="col-md-3">Wordpress :<br /> ★★★☆☆</p>
                 </div>
               </div>
             </div>
             <div class="contentCV content">
             <div class="row justify-content-center">
-              <div id="langues" class="mt-5">
+              <div id="langues" class="mt-2">
                 <h2 class="mt-3">Langues</h2>
                 <div class="row justify-content-center">
-                <p class="col-md-6">Français oral : ★★★★★ </p>
-                <p class="col-md-6">Français écrit : ★★★☆☆</p>
-                <p class="col-md-6">Anglais oral : ★★★☆☆ </p>
-                <p class="col-md-6">Anglais écrit : ★☆☆☆☆</p>
+                <p class="col-md-6">Français oral :<br /> ★★★★★ </p>
+                <p class="col-md-6">Français écrit :<br /> ★★★☆☆</p>
+                <p class="col-md-6">Anglais oral :<br /> ★★★☆☆ </p>
+                <p class="col-md-6">Anglais écrit :<br /> ★☆☆☆☆</p>
               </div>
               </div>                                                              <!--langues-->
             </div>                                                     <!--web-->
             </div>
             <div class="contentCV content">
             <div class="row justify-content-center">
-              <div id="cuisine" class="mb-5 mt-5">
+              <div id="cuisine" class="mb-2">
                 <h2>Cuisinier</h2>
                 <div class="row text-center">
-                  <p class="mt-3 col-md-6">Mise en place : ★★★☆☆</p>
-                  <p class="mt-3 col-md-6">Préparation des sauces : ★★★☆☆</p>
-                  <p class="mt-3 col-md-6">Habillage du poisson : ★★★☆☆</p>
-                  <p id="pointOfInterest" class="mt-3 col-md-6">Poste froid : ★★★☆☆</p>
+                  <p class="mt-3 col-md-6">Mise en place :<br /> ★★★☆☆</p>
+                  <p id="pointOfInterest" class="mt-3 col-md-6">Poste froid :<br /> ★★★☆☆</p>
+                  <p class="mt-3 col-md-6">Habillage du poisson :<br /> ★★★☆☆</p>
+                  <p class="mt-3 col-md-6">Préparation des sauces :<br /> ★★★☆☆</p>
                 </div>
               </div>
             </div>
@@ -144,7 +144,7 @@
             <p class="parag d-none d-md-block d-xs-none">La vie est un mystère qu'il faut vivre, et non un problème à résoudre.</p>
             <p class="quotes d-none d-block d-md-none">La vie est un mystère qu'il faut vivre, et non un problème à résoudre.</p>
           </div>
-          <div class="contentCV content mb-5 pb-5">
+          <div class="contentCV content pb-3 pt-3">
             <div class="row justify-content-center">
               <p class="mt-3 col-md-6 col-xs-12"><strong>Lecture :</strong><br /> Romans / Mangas / Comics</p>
               <p class="mt-3 col-md-6 col-xs-12"><strong>Sport :</strong><br /> Escalade / Basketball / Tennis</p>
