mise a jour liens projets

--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
                             <p>{{ formation.projects.vitrine.comment }}</p>
                             <p class="name">{{ formation.projects.perso.name }}</p>
                             <p>{{ formation.projects.perso.comment }}</p>
-                            <a :href="formation.projects.perso.link">Lien github du projet</a>
+                            <a :href="formation.projects.perso.linkGithub">Lien github du projet</a>
+                            <a :href="formation.projects.perso.linkSite">Lien vers le projet</a>
+                            <p class="name">{{ formation.projects.perso2.name }}</p>
+                            <p>{{ formation.projects.perso2.comment }}</p>
+                            <a :href="formation.projects.perso2.linkSite">Lien vers le projet</a>
                         </div>
                     </div>
                 </div>
