--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div class="celulesA">{{ presentation.pitch }}</div>
                         <div class="celulesB">{{ presentation.desir }}</div>
-                        <!-- <div class="celulesA">{{ presentation.projects }}</div>-->
+                        <div class="celulesA">{{ presentation.projects }}</div>
                     </div>
                 </div>
                 <!--Formation--------------------------------------------------------------------->
