mise a jour des liens projets

--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
                             <p>{{ formation.projects.vitrine.comment }}</p>
                             <p class="name">{{ formation.projects.perso.name }}</p>
                             <p>{{ formation.projects.perso.comment }}</p>
-                            <a :href="formation.projects.perso.linkGithub">Lien github du projet</a>
-                            <a :href="formation.projects.perso.linkSite">Lien vers le projet</a>
+                            <p><a :href="formation.projects.perso.linkSite">Lien vers le projet</a></p>
+                            <p><a :href="formation.projects.perso.linkGithub">Lien github du projet</a></p>
                             <p class="name">{{ formation.projects.perso2.name }}</p>
                             <p>{{ formation.projects.perso2.comment }}</p>
-                            <a :href="formation.projects.perso2.linkSite">Lien vers le projet</a>
+                            <p><a :href="formation.projects.perso2.linkSite">Lien vers le projet</a></p>
+                            <p><a :href="formation.projects.perso2.linkGithub">Lien github du projet</a></p>
                         </div>
                     </div>
                 </div>
