--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                             <li @click="showHome"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page de présentation">Présentation</button></li>
                             <li @click="showFormation"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page formation">Formation</button></li>
                             <li @click="showSkills"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page des compéteces">Compétences</button></li>
+                            <li @click="showPortfolio"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers le portfolio">portfolio</button></li>
                             <!--<li @click="showPointOfInterest"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers les centres d'intérets">Centres d'intéret</button></li>-->
                         </ul>
                     </div>
