--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <!--Portfolio-------------------------------------------------------------------------------------------->
-                <div class="portfolio" v-else-if="page === 'portfolio'">
+                <div class="portfolio" >
                     <div class="profilPic">
                         <h3>{{ portfolio.projet1.name }</h3>
                         <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
