--- a/index.html
+++ b/index.html
@@ -194,14 +194,18 @@
                 <!--Portfolio-------------------------------------------------------------------------------------------->
                 <div class="portfolio" >
                     <div class="profilPic">
-                        <h3>{{ portfolio.projet1.name }</h3>
-                        <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
+                        <span>
+                            <h3>{{ portfolio.projet1.name }}</h3>
+                            <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
+                        </span>
+                        <span>
+                                <h3>{{ portfolio.projet2.name }}</h3>
+                                <div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
+                        </span>
+                            </div>
+                        <span class="profilPic">
                     </div>
-                    <div class="profilPic">
-                        <h3>{{ portfolio.projet2.name }}</h3>
-                        <div></div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
-                    </div>
-
+                            
                 </div>
                 <!--Centres d'intéret--------------------------------------------------------------------->
                 <div class="pointOfInterest" v-else-if="page === 'pointOfInterest'">
