--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
                 </div>
                 <!--Portfolio-------------------------------------------------------------------------------------------->
                 <div class="portfolio" >
-                    <div class="profilPic">
-                        <span>
+                    <div class="profilPic row">
+                        <span class="col-lg-6">
                             <h3>{{ portfolio.projet1.name }}</h3>
                             <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
                         </span>
-                        <span>
-                                <h3>{{ portfolio.projet2.name }}</h3>
-                                <div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
+                        <span class="col-lg-6">
+                            <h3>{{ portfolio.projet2.name }}</h3>
+                            <div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
                         </span>
                             </div>
                         <span class="profilPic">
