--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <!--Portfolio-------------------------------------------------------------------------------------------->
                 <div class="portfolio" >
-                    <div class="profilPic row">
+                    <div class="portfolioPicture row">
                         <span class="col-lg-6">
                             <h3>{{ portfolio.projet1.name }}</h3>
                             <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
