--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li @click="showHome"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page de présentation">Présentation</button></li>
                     <li @click="showFormation"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page formation">Formation</button></li>
                     <li @click="showSkills"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page des compéteces">Compétences</button></li>
-                    <li @click="portfolio"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers le portfolio">Portfolio</button></li>
+                    <li @click="showPortfolio"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers le portfolio">Portfolio</button></li>
                     <!--<li @click="showPointOfInterest"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers les centres d'intérets">Centres d'intéret</button></li>-->
                 </ul>
             </div>
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <!--Portfolio-------------------------------------------------------------------------------------------->
-                <div class="portfolio" >
+                <div class="portfolio" v-else-if="page === 'portfolio'">
                     <div class="profilPic row">
                         <span class="col-lg-6">
                             <h3>{{ portfolio.projet1.name }}</h3>
