--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
                 <!--Portfolio-------------------------------------------------------------------------------------------->
                 <div class="portfolio" v-else-if="page === 'portfolio'">
                     <div class="profilPic row">
-                        <span class="col-lg-6">
+                        <div class="col-lg-6">
                             <h3>{{ portfolio.projet1.name }}</h3>
                             <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
-                        </span>
-                        <span class="col-lg-6">
+                        </div>
+                        <div class="col-lg-6">
                             <h3>{{ portfolio.projet2.name }}</h3>
                             <div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
-                        </span>
+                        </div>
                             </div>
                         <span class="profilPic">
                     </div>
