--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <li @click="showHome"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page de présentation">Présentation</button></li>
                             <li @click="showFormation"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page formation">Formation</button></li>
                             <li @click="showSkills"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers la page des compéteces">Compétences</button></li>
-                            <li @click="showPortfolio"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers le portfolio">portfolio</button></li>
+                            <li @click="showPortfolio"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers le portfolio">Portfolio</button></li>
                             <!--<li @click="showPointOfInterest"><button class="btn btn-secondary btn-lg btn-block button" title="Lien vers les centres d'intérets">Centres d'intéret</button></li>-->
                         </ul>
                     </div>
@@ -195,12 +195,16 @@
                 <div class="portfolio" v-else-if="page === 'portfolio'">
                     <div class="profilPic row">
                         <div class="col-lg-6">
-                            <h3>{{ portfolio.projet1.name }}</h3>
-                            <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
+                            <a :href="formation.projects.perso.linkSite">
+                                <h3>{{ portfolio.projet1.name }}</h3>
+                                <div><img class="picture" :src="portfolio.projet1.picture" alt="Projet n°1" title="Image du projet"></div>
+                            </a>
                         </div>
                         <div class="col-lg-6">
-                            <h3>{{ portfolio.projet2.name }}</h3>
-                            <div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
+                            <a :href="formation.projects.perso2.linkSite">
+                                <h3>{{ portfolio.projet2.name }}</h3>
+                                <div><img class="picture" :src="portfolio.projet2.picture" alt="Projet n°2" title="Image du projet"></div>
+                            </a>
                         </div>
                             </div>
                         <span class="profilPic">
