--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <!--Portfolio-------------------------------------------------------------------------------------------->
                 <div class="portfolio" v-else-if="page === 'portfolio'">
-                    <div class="profilPic row">
+                    <div class="portfolioPicture row">
                         <div class="col-lg-6">
                             <a :href="formation.projects.perso.linkSite">
                                 <h3>{{ portfolio.projet1.name }}</h3>
