--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                 </div>
                 <!--Portfolio-------------------------------------------------------------------------------------------->
                 <div class="portfolio" v-else-if="page === 'portfolio'">
+                        <h1>Portfolio</h1>                    
                     <div class="portfolioPicture row">
                         <div class="col-lg-6">
                             <a :href="formation.projects.perso.linkSite">
