--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <p>{{ formation.school }}</p>
                         </div>
                         <hr>
-                        <h2>Les langages et technologies appris</h2>
+                        <h2>Les langages et technologies apprises</h2>
                         <div class="celulesB">
                             <div class="">
                                 <p class="name">{{ formation.techs.linux.name }}</p>
@@ -129,7 +129,7 @@
                             <p>{{ formation.techs.git.comment }}</p>
                         </div>
                         <hr>
-                        <h2>Les Projets réalisé en formation</h2>
+                        <h2>Les Projets réalisé</h2>
                         <div class="celulesA">
                             <p class="name">{{ formation.projects.cv.name }}</p>
                             <p>{{ formation.projects.cv.comment }}</p>
